<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>event_detector_db_recording_msgs</name>
  <version>0.3.0</version>
  <description>Interfaces for event_detector_db_recording</description>
  <license>TODO</license>

  <maintainer email="lennart.reiher@ika.rwth-aachen.de">Lennart Reiher</maintainer>
  <maintainer email="lukas.zanger@ika.rwth-aachen.de">Lukas Zanger</maintainer>
  <author email="lennart.reiher@ika.rwth-aachen.de">Lennart Reiher</author>
  <author email="lukas.zanger@ika.rwth-aachen.de">Lukas Zanger</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
