<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>event_detector_db_recording_msgs</name>
  <version>1.0.0</version>
  <description>Interfaces for event_detector_db_recording</description>
  <license>TODO</license>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="lukas.zanger@rwth-aachen.de">Lukas Zanger</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
